[gd_scene load_steps=63 format=3 uid="uid://de8aij61getho"]

[ext_resource type="Script" path="res://Scenes/OnBoard/Baracks.gd" id="1_4ds00"]
[ext_resource type="Texture2D" uid="uid://cfs4fb60lh8b" path="res://Gamedata/recroom.vga/012/000.png" id="1_qr57b"]
[ext_resource type="Texture2D" uid="uid://ct73hkgctmlsd" path="res://Gamedata/recroom.vga/012/036.png" id="2_gwplc"]
[ext_resource type="Texture2D" uid="uid://busjouy7m5ywa" path="res://Gamedata/recroom.vga/012/001.png" id="3_ieqqb"]
[ext_resource type="Texture2D" uid="uid://flmb377h2y7y" path="res://Gamedata/recroom.vga/012/002.png" id="4_rn5xh"]
[ext_resource type="Texture2D" uid="uid://bonymy3e0voyh" path="res://Gamedata/recroom.vga/012/003.png" id="5_lgawi"]
[ext_resource type="Texture2D" uid="uid://cvmy1xv30014b" path="res://Gamedata/recroom.vga/012/004.png" id="6_5baaw"]
[ext_resource type="Texture2D" uid="uid://ee1rmiynjmlq" path="res://Gamedata/recroom.vga/012/005.png" id="7_vafru"]
[ext_resource type="Texture2D" uid="uid://0t0as5qym3oa" path="res://Gamedata/recroom.vga/012/006.png" id="8_rbhsd"]
[ext_resource type="Texture2D" uid="uid://bdqabw5gci4bv" path="res://Gamedata/recroom.vga/012/007.png" id="9_6nb2w"]
[ext_resource type="Texture2D" uid="uid://cgritvi2o5bxq" path="res://Gamedata/recroom.vga/012/008.png" id="10_1xnn0"]
[ext_resource type="Texture2D" uid="uid://ckkndtqidrll3" path="res://Gamedata/recroom.vga/012/026.png" id="11_d3vvb"]
[ext_resource type="Texture2D" uid="uid://cqfhqmovqi842" path="res://Gamedata/recroom.vga/012/049.png" id="12_266gq"]
[ext_resource type="Texture2D" uid="uid://bj6y6vdydhide" path="res://Gamedata/recroom.vga/012/011.png" id="14_b3ie0"]
[ext_resource type="Texture2D" uid="uid://cfbrbq1jrl6dt" path="res://Gamedata/recroom.vga/012/012.png" id="15_yxv7l"]
[ext_resource type="Texture2D" uid="uid://txr801ibaoac" path="res://Gamedata/recroom.vga/012/013.png" id="16_jnrjk"]
[ext_resource type="Texture2D" uid="uid://dtjgsfxrp5ki2" path="res://Gamedata/recroom.vga/012/014.png" id="17_h7v6x"]
[ext_resource type="Texture2D" uid="uid://c1esclniso187" path="res://Gamedata/recroom.vga/012/015.png" id="18_m25pq"]
[ext_resource type="Texture2D" uid="uid://s0wwir028ic6" path="res://Gamedata/recroom.vga/012/016.png" id="19_18l4q"]
[ext_resource type="Texture2D" uid="uid://c3yq1y0t6um8t" path="res://Gamedata/recroom.vga/012/017.png" id="20_7wa10"]
[ext_resource type="Texture2D" uid="uid://cfp532ep35ar1" path="res://Gamedata/recroom.vga/012/018.png" id="21_pa822"]
[ext_resource type="Texture2D" uid="uid://8elpr4wesysq" path="res://Gamedata/recroom.vga/012/019.png" id="22_wxl6g"]
[ext_resource type="Texture2D" uid="uid://bie28h8i55mx1" path="res://Gamedata/recroom.vga/012/020.png" id="23_fdehe"]
[ext_resource type="Texture2D" uid="uid://bai02c6ymm2fg" path="res://Gamedata/recroom.vga/012/021.png" id="24_xq0dp"]
[ext_resource type="Texture2D" uid="uid://cvx5f2pxqcypx" path="res://Gamedata/recroom.vga/012/022.png" id="25_qjpa4"]
[ext_resource type="Texture2D" uid="uid://cxanvugoe0hy1" path="res://Gamedata/recroom.vga/012/023.png" id="26_66gcp"]
[ext_resource type="Texture2D" uid="uid://chur2d6fk1qle" path="res://Gamedata/recroom.vga/012/024.png" id="27_yhciq"]
[ext_resource type="Texture2D" uid="uid://pawcaowhuxj2" path="res://Gamedata/recroom.vga/012/009.png" id="28_rsgn4"]
[ext_resource type="Texture2D" uid="uid://b5aeyxm6obk5w" path="res://Gamedata/recroom.vga/012/010.png" id="29_3xiiy"]
[ext_resource type="Texture2D" uid="uid://bmjbm1brgs8eh" path="res://Gamedata/recroom.vga/012/035.png" id="30_6c8t1"]
[ext_resource type="Texture2D" uid="uid://buo0hhlcw73h" path="res://Gamedata/recroom.vga/012/027.png" id="31_on2qd"]
[ext_resource type="Texture2D" uid="uid://buysqfqfdkbky" path="res://Gamedata/recroom.vga/012/028.png" id="32_0ysti"]
[ext_resource type="Texture2D" uid="uid://mmqrdwsj2v8d" path="res://Gamedata/recroom.vga/012/029.png" id="33_jhvwa"]
[ext_resource type="Texture2D" uid="uid://cy7hrnc1nyicw" path="res://Gamedata/recroom.vga/012/030.png" id="34_woxsg"]
[ext_resource type="Texture2D" uid="uid://wbbiaqt7kyeb" path="res://Gamedata/recroom.vga/012/031.png" id="35_v25ay"]
[ext_resource type="Texture2D" uid="uid://dikjiqogcek6o" path="res://Gamedata/recroom.vga/012/032.png" id="36_q4qec"]
[ext_resource type="Texture2D" uid="uid://iulsgl6y8bur" path="res://Gamedata/recroom.vga/012/033.png" id="37_85c6s"]
[ext_resource type="Texture2D" uid="uid://dt00ucimmcndb" path="res://Gamedata/recroom.vga/012/034.png" id="38_15s6u"]
[ext_resource type="Texture2D" uid="uid://ces7vqhkgcitu" path="res://Gamedata/recroom.vga/012/037.png" id="39_qogpo"]
[ext_resource type="Texture2D" uid="uid://cmla4rcysy8vt" path="res://Gamedata/recroom.vga/012/038.png" id="40_1hgb4"]
[ext_resource type="Texture2D" uid="uid://blwdtj78ibqu0" path="res://Gamedata/recroom.vga/012/039.png" id="41_tlasu"]
[ext_resource type="Texture2D" uid="uid://b0100kykmrpm2" path="res://Gamedata/recroom.vga/012/040.png" id="42_l5qhl"]
[ext_resource type="Texture2D" uid="uid://g364j6qe8hcn" path="res://Gamedata/recroom.vga/012/041.png" id="43_duymb"]
[ext_resource type="Texture2D" uid="uid://c82xsy6jl1jix" path="res://Gamedata/recroom.vga/012/042.png" id="44_pj677"]
[ext_resource type="Texture2D" uid="uid://825a2sm5tv8o" path="res://Gamedata/recroom.vga/012/043.png" id="45_u15by"]
[ext_resource type="Texture2D" uid="uid://bd6xki6bipth" path="res://Gamedata/recroom.vga/012/044.png" id="46_rpn23"]
[ext_resource type="Texture2D" uid="uid://d2ci1e0notwwx" path="res://Gamedata/recroom.vga/012/045.png" id="47_est50"]
[ext_resource type="Texture2D" uid="uid://bl4pmbnfqfjc6" path="res://Gamedata/recroom.vga/012/046.png" id="48_7y58e"]
[ext_resource type="Texture2D" uid="uid://bd6frqau23wuy" path="res://Gamedata/recroom.vga/012/047.png" id="49_8aqbh"]
[ext_resource type="Texture2D" uid="uid://dyh1sek3c68vr" path="res://Gamedata/recroom.vga/012/048.png" id="50_4ukmm"]
[ext_resource type="Texture2D" uid="uid://fjwoconn1rab" path="res://Gamedata/recroom.vga/012/050.png" id="51_bcgdk"]
[ext_resource type="PackedScene" uid="uid://cw0hthoxdkc04" path="res://Assets/Cursor.tscn" id="52_n4lwg"]
[ext_resource type="FontFile" uid="uid://dnp1htyo3rmv4" path="res://Fonts/Stop.ttf" id="53_rn6ds"]

[sub_resource type="SpriteFrames" id="SpriteFrames_c6h05"]
animations = [{
"frames": [{
"duration": 0.3,
"texture": ExtResource("11_d3vvb")
}, {
"duration": 6.0,
"texture": ExtResource("12_266gq")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_cuidl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_b3ie0")
}, {
"duration": 1.0,
"texture": ExtResource("15_yxv7l")
}, {
"duration": 1.0,
"texture": ExtResource("16_jnrjk")
}, {
"duration": 1.0,
"texture": ExtResource("17_h7v6x")
}, {
"duration": 1.0,
"texture": ExtResource("18_m25pq")
}, {
"duration": 1.0,
"texture": ExtResource("19_18l4q")
}, {
"duration": 1.0,
"texture": ExtResource("20_7wa10")
}, {
"duration": 1.0,
"texture": ExtResource("21_pa822")
}, {
"duration": 1.0,
"texture": ExtResource("22_wxl6g")
}, {
"duration": 1.0,
"texture": ExtResource("23_fdehe")
}, {
"duration": 1.0,
"texture": ExtResource("24_xq0dp")
}, {
"duration": 1.0,
"texture": ExtResource("25_qjpa4")
}, {
"duration": 1.0,
"texture": ExtResource("26_66gcp")
}, {
"duration": 1.0,
"texture": ExtResource("27_yhciq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_i10sk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("31_on2qd")
}, {
"duration": 1.0,
"texture": ExtResource("32_0ysti")
}, {
"duration": 1.0,
"texture": ExtResource("33_jhvwa")
}, {
"duration": 1.0,
"texture": ExtResource("34_woxsg")
}, {
"duration": 1.0,
"texture": ExtResource("35_v25ay")
}, {
"duration": 1.0,
"texture": ExtResource("36_q4qec")
}, {
"duration": 1.0,
"texture": ExtResource("37_85c6s")
}, {
"duration": 1.0,
"texture": ExtResource("38_15s6u")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_xul8f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("39_qogpo")
}, {
"duration": 1.0,
"texture": ExtResource("40_1hgb4")
}, {
"duration": 1.0,
"texture": ExtResource("41_tlasu")
}, {
"duration": 1.0,
"texture": ExtResource("42_l5qhl")
}, {
"duration": 1.0,
"texture": ExtResource("43_duymb")
}, {
"duration": 1.0,
"texture": ExtResource("44_pj677")
}, {
"duration": 1.0,
"texture": ExtResource("45_u15by")
}, {
"duration": 1.0,
"texture": ExtResource("46_rpn23")
}, {
"duration": 1.0,
"texture": ExtResource("47_est50")
}, {
"duration": 1.0,
"texture": ExtResource("48_7y58e")
}, {
"duration": 1.0,
"texture": ExtResource("49_8aqbh")
}, {
"duration": 1.0,
"texture": ExtResource("50_4ukmm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="GDScript" id="GDScript_auwpx"]
script/source = "extends TextureButton


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_pressed():
	print(\"_on_pressed\")
	get_tree().change_scene_to_file(\"res://Scenes/OnBoard/Bar.tscn\")
"

[sub_resource type="GDScript" id="GDScript_3kvyj"]
script/source = "extends TextureButton


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_pressed():
	get_tree().quit()
"

[sub_resource type="GDScript" id="GDScript_3lrq1"]
script/source = "extends TextureButton


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass


func _on_pressed() -> void:
	print(\"_on_pressed on StartMission\")

"

[sub_resource type="GDScript" id="GDScript_510oe"]
script/source = "extends TextureButton


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass



func _on_pressed() -> void:
	print(\"_on_pressed on ShowMedals\")
"

[sub_resource type="LabelSettings" id="LabelSettings_t8o3c"]
font = ExtResource("53_rn6ds")
font_size = 48

[node name="BaracksScene" type="CanvasLayer"]
script = ExtResource("1_4ds00")

[node name="BackgroundCanvas" type="CanvasLayer" parent="."]

[node name="EmptyBaracks" type="Sprite2D" parent="BackgroundCanvas"]
texture = ExtResource("1_qr57b")
centered = false

[node name="ForegroundCanvas" type="CanvasLayer" parent="."]
layer = 10

[node name="WaterdropBackground" type="Sprite2D" parent="ForegroundCanvas"]
position = Vector2(1164, 0)
texture = ExtResource("2_gwplc")
centered = false

[node name="Beds" type="Node2D" parent="ForegroundCanvas"]

[node name="Bed0" type="Sprite2D" parent="ForegroundCanvas/Beds"]
position = Vector2(440, 348)
texture = ExtResource("3_ieqqb")
centered = false

[node name="Bed1" type="Sprite2D" parent="ForegroundCanvas/Beds"]
position = Vector2(684, 344)
texture = ExtResource("4_rn5xh")
centered = false

[node name="Bed2" type="Sprite2D" parent="ForegroundCanvas/Beds"]
position = Vector2(392, 384)
texture = ExtResource("5_lgawi")
centered = false

[node name="Bed3" type="Sprite2D" parent="ForegroundCanvas/Beds"]
position = Vector2(696, 384)
texture = ExtResource("6_5baaw")
centered = false

[node name="Bed4" type="Sprite2D" parent="ForegroundCanvas/Beds"]
position = Vector2(316, 444)
texture = ExtResource("7_vafru")
centered = false

[node name="Bed5" type="Sprite2D" parent="ForegroundCanvas/Beds"]
position = Vector2(708, 444)
texture = ExtResource("8_rbhsd")
centered = false

[node name="Bed6" type="Sprite2D" parent="ForegroundCanvas/Beds"]
position = Vector2(172, 548)
texture = ExtResource("9_6nb2w")
centered = false

[node name="Bed7" type="Node2D" parent="ForegroundCanvas/Beds"]
position = Vector2(732, 544)

[node name="Used" type="Sprite2D" parent="ForegroundCanvas/Beds/Bed7"]
texture = ExtResource("10_1xnn0")
centered = false

[node name="LoadSlot" type="TextureButton" parent="ForegroundCanvas/Beds/Bed7/Used"]
offset_right = 186.0
offset_bottom = 120.0

[node name="SaveSlot" type="TextureButton" parent="ForegroundCanvas/Beds/Bed7/Used"]
offset_left = 186.0
offset_right = 372.0
offset_bottom = 120.0

[node name="Unused" type="TextureButton" parent="ForegroundCanvas/Beds/Bed7"]
visible = false
offset_right = 372.0
offset_bottom = 120.0

[node name="CeilingLight" type="AnimatedSprite2D" parent="ForegroundCanvas"]
position = Vector2(180, 0)
sprite_frames = SubResource("SpriteFrames_c6h05")
frame_progress = 0.22782
centered = false

[node name="HealthPannel" type="Node2D" parent="ForegroundCanvas"]
position = Vector2(563, 661)

[node name="HealthStatus1" type="Node2D" parent="ForegroundCanvas/HealthPannel"]
position = Vector2(9, 7)

[node name="Active" type="Sprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus1"]
visible = false
texture = ExtResource("28_rsgn4")
centered = false

[node name="Inactive" type="Sprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus1"]
texture = ExtResource("29_3xiiy")
centered = false

[node name="Healthbar" type="AnimatedSprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus1"]
visible = false
position = Vector2(20, -4)
sprite_frames = SubResource("SpriteFrames_cuidl")
frame_progress = 0.080987
centered = false

[node name="HealthStatus2" type="Node2D" parent="ForegroundCanvas/HealthPannel"]
position = Vector2(88, 7)

[node name="Active" type="Sprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus2"]
visible = false
position = Vector2(45, 0)
texture = ExtResource("28_rsgn4")
centered = false

[node name="Inactive" type="Sprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus2"]
position = Vector2(45, 0)
texture = ExtResource("29_3xiiy")
centered = false

[node name="Healthbar" type="AnimatedSprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus2"]
visible = false
position = Vector2(-1, -4)
sprite_frames = SubResource("SpriteFrames_cuidl")
frame_progress = 0.296783
centered = false

[node name="HealthStatus3" type="Node2D" parent="ForegroundCanvas/HealthPannel"]
position = Vector2(9, 27)

[node name="Active" type="Sprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus3"]
visible = false
texture = ExtResource("28_rsgn4")
centered = false

[node name="Inactive" type="Sprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus3"]
texture = ExtResource("29_3xiiy")
centered = false

[node name="Healthbar" type="AnimatedSprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus3"]
visible = false
position = Vector2(20, -4)
sprite_frames = SubResource("SpriteFrames_cuidl")
frame_progress = 0.535666
centered = false

[node name="HealthStatus4" type="Node2D" parent="ForegroundCanvas/HealthPannel"]
position = Vector2(88, 27)

[node name="Active" type="Sprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus4"]
visible = false
position = Vector2(45, 0)
texture = ExtResource("28_rsgn4")
centered = false

[node name="Inactive" type="Sprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus4"]
position = Vector2(45, 0)
texture = ExtResource("29_3xiiy")
centered = false

[node name="Healthbar" type="AnimatedSprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus4"]
visible = false
position = Vector2(-1, -4)
sprite_frames = SubResource("SpriteFrames_cuidl")
frame_progress = 0.175395
centered = false

[node name="HealthStatus5" type="Node2D" parent="ForegroundCanvas/HealthPannel"]
position = Vector2(9, 47)

[node name="Active" type="Sprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus5"]
visible = false
texture = ExtResource("28_rsgn4")
centered = false

[node name="Inactive" type="Sprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus5"]
texture = ExtResource("29_3xiiy")
centered = false

[node name="Healthbar" type="AnimatedSprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus5"]
visible = false
position = Vector2(20, -4)
sprite_frames = SubResource("SpriteFrames_cuidl")
frame_progress = 0.535666
centered = false

[node name="HealthStatus6" type="Node2D" parent="ForegroundCanvas/HealthPannel"]
position = Vector2(88, 47)

[node name="Active" type="Sprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus6"]
visible = false
position = Vector2(45, 0)
texture = ExtResource("28_rsgn4")
centered = false

[node name="Inactive" type="Sprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus6"]
position = Vector2(45, 0)
texture = ExtResource("29_3xiiy")
centered = false

[node name="Healthbar" type="AnimatedSprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus6"]
visible = false
position = Vector2(-1, -4)
sprite_frames = SubResource("SpriteFrames_cuidl")
frame_progress = 0.175395
centered = false

[node name="HealthStatus7" type="Node2D" parent="ForegroundCanvas/HealthPannel"]
position = Vector2(9, 67)

[node name="Active" type="Sprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus7"]
visible = false
texture = ExtResource("28_rsgn4")
centered = false

[node name="Inactive" type="Sprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus7"]
texture = ExtResource("29_3xiiy")
centered = false

[node name="Healthbar" type="AnimatedSprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus7"]
visible = false
position = Vector2(20, -4)
sprite_frames = SubResource("SpriteFrames_cuidl")
frame_progress = 0.535666
centered = false

[node name="HealthStatus8" type="Node2D" parent="ForegroundCanvas/HealthPannel"]
position = Vector2(88, 67)

[node name="Active" type="Sprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus8"]
visible = false
position = Vector2(45, 0)
texture = ExtResource("28_rsgn4")
centered = false

[node name="Inactive" type="Sprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus8"]
position = Vector2(45, 0)
texture = ExtResource("29_3xiiy")
centered = false

[node name="Healthbar" type="AnimatedSprite2D" parent="ForegroundCanvas/HealthPannel/HealthStatus8"]
visible = false
position = Vector2(-1, -4)
sprite_frames = SubResource("SpriteFrames_cuidl")
frame_progress = 0.175395
centered = false

[node name="PipePart" type="Sprite2D" parent="ForegroundCanvas"]
position = Vector2(1204, 144)
texture = ExtResource("30_6c8t1")

[node name="FalingWaterdrop" type="AnimatedSprite2D" parent="ForegroundCanvas"]
position = Vector2(1208, 140)
sprite_frames = SubResource("SpriteFrames_i10sk")
frame_progress = 0.386524
centered = false

[node name="BucketWaterdrop" type="AnimatedSprite2D" parent="ForegroundCanvas"]
position = Vector2(1160, 556)
sprite_frames = SubResource("SpriteFrames_xul8f")
frame_progress = 0.444017
centered = false

[node name="Status" type="Sprite2D" parent="ForegroundCanvas"]
position = Vector2(0, 748)
texture = ExtResource("51_bcgdk")
centered = false

[node name="OverlayCanvas" type="CanvasLayer" parent="."]
layer = 100

[node name="EnterBarButton" type="TextureButton" parent="OverlayCanvas"]
offset_left = 32.0
offset_top = 116.0
offset_right = 192.0
offset_bottom = 416.0
script = SubResource("GDScript_auwpx")

[node name="ExitGameButton" type="TextureButton" parent="OverlayCanvas"]
offset_left = 848.0
offset_top = 132.0
offset_right = 992.0
offset_bottom = 344.0
script = SubResource("GDScript_3kvyj")

[node name="StartMissionButton" type="TextureButton" parent="OverlayCanvas"]
offset_left = 1094.0
offset_top = 121.0
offset_right = 1251.0
offset_bottom = 412.0
script = SubResource("GDScript_3lrq1")

[node name="ShowMedalsButton" type="TextureButton" parent="OverlayCanvas"]
offset_left = 347.0
offset_top = 179.0
offset_right = 489.0
offset_bottom = 323.0
script = SubResource("GDScript_510oe")

[node name="Cursor" parent="OverlayCanvas" instance=ExtResource("52_n4lwg")]

[node name="TooltipTextLabel" type="Label" parent="OverlayCanvas"]
offset_top = 736.0
offset_right = 1280.0
offset_bottom = 800.0
text = "..."
label_settings = SubResource("LabelSettings_t8o3c")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="ForegroundCanvas/Beds/Bed7/Used/LoadSlot" to="OverlayCanvas/Cursor" method="_on_interaction_area_entered" binds= ["Load Slot 8"]]
[connection signal="mouse_exited" from="ForegroundCanvas/Beds/Bed7/Used/LoadSlot" to="OverlayCanvas/Cursor" method="_on_interaction_area_exited"]
[connection signal="pressed" from="ForegroundCanvas/Beds/Bed7/Used/LoadSlot" to="." method="_on_load_slot_pressed" binds= [7]]
[connection signal="mouse_entered" from="ForegroundCanvas/Beds/Bed7/Used/SaveSlot" to="OverlayCanvas/Cursor" method="_on_interaction_area_entered" binds= ["Save Slot 8"]]
[connection signal="mouse_exited" from="ForegroundCanvas/Beds/Bed7/Used/SaveSlot" to="OverlayCanvas/Cursor" method="_on_interaction_area_exited"]
[connection signal="pressed" from="ForegroundCanvas/Beds/Bed7/Used/SaveSlot" to="." method="_on_save_slot_pressed" binds= [7]]
[connection signal="mouse_entered" from="ForegroundCanvas/Beds/Bed7/Unused" to="OverlayCanvas/Cursor" method="_on_interaction_area_entered" binds= ["Save Slot 8"]]
[connection signal="mouse_exited" from="ForegroundCanvas/Beds/Bed7/Unused" to="OverlayCanvas/Cursor" method="_on_interaction_area_exited"]
[connection signal="pressed" from="ForegroundCanvas/Beds/Bed7/Unused" to="." method="_on_unused_pressed" binds= [7]]
[connection signal="mouse_entered" from="OverlayCanvas/EnterBarButton" to="OverlayCanvas/Cursor" method="_on_interaction_area_entered" binds= ["Enter Bar"]]
[connection signal="mouse_exited" from="OverlayCanvas/EnterBarButton" to="OverlayCanvas/Cursor" method="_on_interaction_area_exited"]
[connection signal="pressed" from="OverlayCanvas/EnterBarButton" to="OverlayCanvas/EnterBarButton" method="_on_pressed"]
[connection signal="mouse_entered" from="OverlayCanvas/ExitGameButton" to="OverlayCanvas/Cursor" method="_on_interaction_area_entered" binds= ["Exit Game"]]
[connection signal="mouse_exited" from="OverlayCanvas/ExitGameButton" to="OverlayCanvas/Cursor" method="_on_interaction_area_exited"]
[connection signal="pressed" from="OverlayCanvas/ExitGameButton" to="OverlayCanvas/ExitGameButton" method="_on_pressed"]
[connection signal="mouse_entered" from="OverlayCanvas/StartMissionButton" to="OverlayCanvas/Cursor" method="_on_interaction_area_entered" binds= ["Start Mission"]]
[connection signal="mouse_exited" from="OverlayCanvas/StartMissionButton" to="OverlayCanvas/Cursor" method="_on_interaction_area_exited"]
[connection signal="pressed" from="OverlayCanvas/StartMissionButton" to="OverlayCanvas/StartMissionButton" method="_on_pressed"]
[connection signal="mouse_entered" from="OverlayCanvas/ShowMedalsButton" to="OverlayCanvas/Cursor" method="_on_interaction_area_entered" binds= ["Show Medals"]]
[connection signal="mouse_exited" from="OverlayCanvas/ShowMedalsButton" to="OverlayCanvas/Cursor" method="_on_interaction_area_exited"]
[connection signal="pressed" from="OverlayCanvas/ShowMedalsButton" to="OverlayCanvas/ShowMedalsButton" method="_on_pressed"]
